src/renderer/src/assets/style.scss
@import "hljs";

html {
  box-sizing: content-box;
  max-height: 100%;
}

html, body, #root {
  height: 100%;
  margin: 0;
  padding: 0;
}

#root {
  display: flex;
  flex-direction: column;
  max-height: 100%;
}

.config-container {

  overflow: hidden;
}

.logo {
  height: 60px;
  margin-right: -17px;
}

.je-not-loaded {
  visibility: hidden;
}

.index {
  display: inline-flex;
  flex-direction: column;
  overflow-x: hidden;
  width: 25%;
}

.index ul {
  overflow-y: scroll;
  overflow-x: hidden;
  height: 100%;
}

.config {
  overflow-y: auto;
  max-height: 100%;
  position: relative;
  width: 75%;
}

.keys-index {
  list-style-type: none;
  padding-left: 5px;
  margin: 0;
  font-size: 0.85em;
}
.keys-index ul {
  list-style-type: none;
  padding-left: 1rem;
  margin: 0;
}

textarea {
  overflow: hidden;
}

.set-default {
  top: 6px;
}

.index .filter {
  width: inherit;
  margin-right: 5%;
}

@media (prefers-color-scheme: light) {
  @import "highlight.js/scss/a11y-light";
  .hljs {
    background: #eee;
  }
}

@media (prefers-color-scheme: dark) {
  @import "highlight.js/scss/a11y-dark";
}

.pointer {
  cursor: pointer;
}

/** Temporary */

.toast-center {
  position: fixed;
  z-index: 55;
  align-items: center;
  justify-content: center;
  width: 70%;
  left: 30%;
  display: none;
  opacity: 0;
  top: 20px;
}

.toast {
  opacity: 1 !important;
}

.toast-center.visible {
  -webkit-animation: fadein 0.5s, fadeout 0.5s 3s;
  animation: fadein 0.5s, fadeout 0.5s 3s;
  opacity: 1;
  display: flex;
}

.is-invalid input, .is-invalid textarea {
  border: 1px solid red;
}

@keyframes fadein {
  from {
    opacity: 0;
    top: -30px;
  }
  to {
    opacity: 1;
    top: 20px;
  }
}

@keyframes fadeout {
  from {
    opacity: 1;
    top: 0
  }
  to {
    opacity: 20;
    top: -30px;
  }
}

.description {
  margin: 10px 3px;
}

.description h3 {
  font-size: 1.3em;
}

.show-password {
  position: relative;
  top: -32px;
  text-align: right;
  padding-right: 20px;
  display: inline;
  float: right;
}

.show-password span {
  font-size: 11px;
  cursor: pointer;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}

/* json editor */

.code-pane {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.line-numbers {
  display: none !important;
}

.line-numbers div {
  position: relative;
}

.line-numbers-divider {
  position: absolute;
  top: 0;
  left: 35px;
  height: 100%;
  border-right: 1px solid
}

.code-editor.with-lines .line-numbers {
  width: 40px;
  display: inline !important;
  opacity: 0.4;
  padding-top: 7px !important;
}

.code-editor.with-lines .input-group {
  position: relative;
  left: -40px;
}

.code-editor.with-lines textarea {
  margin-right: -40px;
  padding-left: 40px;
  resize: none;
}

.code-editor.with-lines code.form-control {
  margin-left: -40px;
  padding-left: 40px !important;
}

.code-editor pre {
    top: 0;
    left: 0;
}

.code-editor pre code {
  background: none;
  font-size: 0.8rem !important;
  font-family: var(--bs-font-monospace), monospace;
  padding: 0.375rem 0.75rem !important;
  font-weight: 400;
  line-height: 1.5 !important;
}

.code-editor.with-lines .input-group {
  padding-left: 40px;
}

.code-editor .current-line {
  position: absolute;
  top: 0;
  width: 100%;
  left: 0;
  display: block;
  border: 1px solid red;
  opacity: 0.55;
  box-sizing: border-box;
}

.code-editor textarea {
    background-color: rgba(1, 1, 1, 0) !important;
    color: rgba(255, 1, 1, 0) !important;
    caret-color: var(--bs-emphasis-color);
    font-family: var(--bs-font-monospace), monospace;
    font-size: 0.8rem;
  }

.card:hover {
  border: 1px solid var(--bs-primary-text-emphasis) !important;
}

.text-decoration-dotted {
  text-decoration: underline dotted;
}


#code-preview .modal-body {
  overflow-y: auto;
  overflow-x: hidden;
  height: 50vh;
  padding: 0;
}

#code-preview pre {
  margin: 0;
}

#code-preview .hljs {
  padding: 15px !important;
}

.code-editor .selected-line {
  font-weight: bold;
}

